tests/baselines/reference/for-of17.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of17.ts(14,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of17.ts (1 errors) ====
    class NumberIterator {
        next() {
            return {
                value: 0,
                done: false
            };
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var v: string;
    for (v of new NumberIterator) { } // Should succeed
              ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.